fix(Markdown): make all children correctly aligned

--- a/src/components/Emoji/Emoji.css
+++ b/src/components/Emoji/Emoji.css
@@ -8,7 +8,7 @@
   display: inline-block;
   overflow: hidden;
   cursor: inherit;
-  vertical-align: text-bottom;
+  vertical-align: text-bottom !important;
   background-size: 100%;
 
   /* hide emoji char */
@@ -19,7 +19,7 @@
 .char {
   display: inline-block;
   text-align: center;
-  vertical-align: text-bottom;
+  vertical-align: text-bottom !important;
   word-break: break-all;
   font-family: var(--font-emoji);
   font-weight: normal;
