--- a/src/components/Markdown/Markdown.css
+++ b/src/components/Markdown/Markdown.css
@@ -6,10 +6,6 @@
 
 .container {
   font-family: var(--default-font-family);
-
-  & span {
-    vertical-align: middle;
-  }
 }
 
 .inline {
@@ -28,7 +24,8 @@
   box-shadow: inset 0 1px 1px 0 color(#000 alpha(10%));
   font-size: 12px;
   font-family: var(--code-font-family);
-  line-height: 1.5;
+  line-height: 18px;
+  vertical-align: inherit;
 
   & code {
     font-family: var(--code-font-family);
@@ -38,6 +35,10 @@
 .paragraph {
   margin: var(--message-text-padding) 0;
   word-break: break-word;
+
+  & span {
+    vertical-align: inherit;
+  }
 }
 
 .blockquote {
@@ -61,14 +62,17 @@
 .code {
   padding: 2px 4px;
   border-radius: var(--default-border-radius-small);
-  background-color: color(#000 alpha(5%));
   box-shadow: inset 0 1px 1px 0 color(#000 alpha(10%));
+  background-color: color(#000 alpha(5%));
   font-size: 14px;
   font-family: var(--code-font-family);
+  display: inline-block;
+  height: 22px;
+  box-sizing: border-box;
 }
 
 .bold {
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .italic {
@@ -83,7 +87,6 @@
   text-decoration: none;
   border-bottom: 1px dotted var(--color-info);
   color: var(--color-info);
-  vertical-align: middle;
 
   &:hover {
     border-bottom: 1px solid var(--color-info);
@@ -92,7 +95,8 @@
 
 .mention {
   display: inline-block;
-  padding: 0 2px;
-  border-radius: 2px;
+  padding: 2px 4px;
+  border-radius: var(--default-border-radius-small);
+  box-shadow: inset 0 1px 1px 0 color(#000 alpha(10%));
   background-color: color(var(--color-primary) alpha(10%));
 }
